[#9] sai/suresh - Added game board
What are the changes?

* Added game board tiles (rat race)

Why do we need this change?

* to add tiles to board of the game

--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -8,7 +8,33 @@
 
   <body>
     <div class="page-wrapper">
-      <div id="board"></div>
+      <div id="board">
+
+        <div class="ratrace-tile" id="rat-tile-1"></div>
+        <div class="ratrace-tile" id="rat-tile-2"></div>
+        <div class="ratrace-tile" id="rat-tile-3"></div>
+        <div class="ratrace-tile" id="rat-tile-4"></div>
+        <div class="ratrace-tile" id="rat-tile-5"></div>
+        <div class="ratrace-tile" id="rat-tile-6"></div>
+        <div class="ratrace-tile" id="rat-tile-7"></div>
+        <div class="ratrace-tile" id="rat-tile-8"></div>
+        <div class="ratrace-tile" id="rat-tile-9"></div>
+        <div class="ratrace-tile" id="rat-tile-10"></div>
+        <div class="ratrace-tile" id="rat-tile-11"></div>
+        <div class="ratrace-tile" id="rat-tile-12"></div>
+        <div class="ratrace-tile" id="rat-tile-13"></div>
+        <div class="ratrace-tile" id="rat-tile-14"></div>
+        <div class="ratrace-tile" id="rat-tile-15"></div>
+        <div class="ratrace-tile" id="rat-tile-16"></div>
+        <div class="ratrace-tile" id="rat-tile-17"></div>
+        <div class="ratrace-tile" id="rat-tile-18"></div>
+        <div class="ratrace-tile" id="rat-tile-19"></div>
+        <div class="ratrace-tile" id="rat-tile-20"></div>
+        <div class="ratrace-tile" id="rat-tile-21"></div>
+        <div class="ratrace-tile" id="rat-tile-22"></div>
+        <div class="ratrace-tile" id="rat-tile-23"></div>
+        <div class="ratrace-tile" id="rat-tile-24"></div>
+      </div>
       <div id="game-panel">
         <header>
           <h2><a href="/">Cash Flow</a></h2>
@@ -18,7 +44,6 @@
             <li id="profile">
               <span class="expands-indicator">«</span>
               My profile
-              <div id="profile-coin"></div>
             </li>
             <li id="others-profile">
               <span class="expands-indicator">«</span>
