--- a/views/ratrace/board-style.css
+++ b/views/ratrace/board-style.css
@@ -2,19 +2,20 @@
   display: flex;
   padding: 0.5em;
   column-gap: 0.5em;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #board {
-  width: 85%;
-  height: 100%;
+  max-width: 85vw;
+  max-height: 100%;
+  justify-content: stretch;
   border: var(--def-border);
 }
 
 #game-panel {
   border: var(--def-border);
-  width: 15%;
+  width: 15vw;
   height: 100%;
   display: flex;
   flex-flow: column;
@@ -61,14 +62,6 @@ a {
   padding: 0.5em 0.8em;
 }
 
-#profile-coin {
-  height: 1em;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  border: var(--def-border);
-  justify-self: flex-end;
-}
-
 #loan-options {
   display: flex;
   justify-content: space-evenly;
@@ -99,11 +92,139 @@ a {
   aspect-ratio: 3;
   border: var(--def-border);
   align-self: center;
-  position: relative;
-  top: 5%;
 }
 
 .ratrace-tile {
   width: 200px;
   border: var(--def-border);
 }
+
+#board {
+  display: grid;
+  width: fit-content;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+/* Grid element positions START*/
+#rat-tile-1 {
+  grid-row: 6;
+  grid-column: 3;
+}
+
+#rat-tile-2 {
+  grid-row: 6;
+  grid-column: 2;
+}
+
+#rat-tile-3 {
+  grid-row: 6;
+  grid-column: 1;
+}
+
+#rat-tile-4 {
+  grid-row: 5;
+  grid-column: 1;
+}
+
+#rat-tile-5 {
+  grid-row: 4;
+  grid-column: 1;
+}
+
+#rat-tile-6 {
+  grid-row: 3;
+  grid-column: 1;
+}
+
+#rat-tile-7 {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+#rat-tile-8 {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+#rat-tile-9 {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+#rat-tile-10 {
+  grid-row: 1;
+  grid-column: 3;
+}
+
+#rat-tile-11 {
+  grid-row: 1;
+  grid-column: 4;
+}
+
+#rat-tile-12 {
+  grid-row: 1;
+  grid-column: 5;
+}
+
+#rat-tile-13 {
+  grid-row: 1;
+  grid-column: 6;
+}
+
+#rat-tile-14 {
+  grid-row: 1;
+  grid-column: 7;
+}
+
+#rat-tile-15 {
+  grid-row: 1;
+  grid-column: 8;
+}
+
+#rat-tile-16 {
+  grid-row: 2;
+  grid-column: 8;
+}
+
+#rat-tile-17 {
+  grid-row: 3;
+  grid-column: 8;
+}
+
+#rat-tile-18 {
+  grid-row: 4;
+  grid-column: 8;
+}
+
+#rat-tile-19 {
+  grid-row: 5;
+  grid-column: 8;
+}
+
+#rat-tile-20 {
+  grid-row: 6;
+  grid-column: 8;
+}
+
+#rat-tile-21 {
+  grid-row: 6;
+  grid-column: 7;
+}
+
+#rat-tile-22 {
+  grid-row: 6;
+  grid-column: 6;
+}
+
+#rat-tile-23 {
+  grid-row: 6;
+  grid-column: 5;
+}
+
+#rat-tile-24 {
+  grid-row: 6;
+  grid-column: 4;
+}
+
+/* grid element positions end */
