--- a/views/ratrace/common.css
+++ b/views/ratrace/common.css
@@ -2,8 +2,9 @@
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --bgColor: dimgrey;
   --def-border: 0.5px solid black;
-  --page-header: 2.5em;
-  --plain-font: 1.3em;
+  /* --page-header: 2.5em; */
+  --page-header: 2.5vmax;
+  --plain-font: 1.2vmax;
 }
 
 * {
