--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -1,10 +1,10 @@
 <html lang="en">
 
-<head>
-  <title>Cashflow</title>
-  <link rel="stylesheet" href="common.css">
-  <link rel="stylesheet" href="board-style.css">
-</head>
+  <head>
+    <title>Cashflow</title>
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="board-style.css">
+  </head>
 
   <body>
     <div class="page-wrapper">
@@ -37,7 +37,7 @@
       </div>
       <div id="game-panel">
         <header>
-          <h2><a href="/">Cash Flow</a></h2>
+          <h2><a href="/">Cashflow</a></h2>
         </header>
         <nav id="game-nav">
           <ul>
@@ -63,11 +63,8 @@
         <div id="dice-box"></div>
         <div id="board-toggle"></div>
       </div>
-      <div id="logs"></div>
-      <div id="dice-box"></div>
-      <div id="board-toggle"></div>
     </div>
-  </div>
-</body>
+    </div>
+  </body>
 
 </html>
