[#14] dileep/gayathri - listing other players
What are the changes?

* Added the colors for each player.

Why do we need this change?

* To identify the player

--- a/views/ratrace/otherPlayers.css
+++ b/views/ratrace/otherPlayers.css
@@ -62,3 +62,27 @@
   aspect-ratio: 8;
   width: 30%;
 }
+
+.lightblue {
+  background-color: lightblue;
+}
+
+.green {
+  background-color: green;
+}
+
+.orange {
+  background-color: orange;
+}
+
+.red {
+  background-color: red;
+}
+
+.brown {
+  background-color: brown;
+}
+
+.yellow {
+  background-color: yellow;
+}
