--- a/views/ratrace/otherPlayers.html
+++ b/views/ratrace/otherPlayers.html
@@ -12,32 +12,32 @@
       <div class="heading"> Other Players</div>
       <div class="player-info">
         <div class="name">Player</div>
-        <div class="icon"></div>
+        <div class="icon yellow"></div>
       </div>
     </header>
     <div class="players-wrapper">
       <div class="row">
-        <div class="icon" id="player-icon"></div>
+        <div class="icon brown" id="player-icon"></div>
         <div class="name" id="player-name">Sasuke</div>
         <div class="profession" id="player-profession">Mechanic</div>
       </div>
       <div class="row">
-        <div class="icon" id="player-icon"></div>
+        <div class="icon lightblue" id="player-icon"></div>
         <div class="name" id="player-name">Naruto</div>
         <div class="profession" id="player-profession">Teacher</div>
       </div>
       <div class="row">
-        <div class="icon" id="player-icon"></div>
+        <div class="icon orange" id="player-icon"></div>
         <div class="name" id="player-name">Tanjiro</div>
         <div class="profession" id="player-profession">Police</div>
       </div>
       <div class="row">
-        <div class="icon" id="player-icon"></div>
+        <div class="icon red" id="player-icon"></div>
         <div class="name" id="player-name">Eren Yeager</div>
         <div class="profession" id="player-profession">Janitor</div>
       </div>
       <div class="row">
-        <div class="icon" id="player-icon"></div>
+        <div class="icon green" id="player-icon"></div>
         <div class="name" id="player-name">Mikasa</div>
         <div class="profession" id="player-profession">Pilot</div>
       </div>
