--- a/views/ratrace/common.css
+++ b/views/ratrace/common.css
@@ -2,15 +2,17 @@
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --bgColor: dimgrey;
   --def-border: 0.5px solid black;
-  /* --page-header: 2.5em; */
   --page-header: 2.5vmax;
   --plain-font: 1.2vmax;
+  --primary: #2e152f;
+  --secondary-light: #f2e1c8;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-rendering: geometricPrecision;
 }
 
 body {
