[#3] dileep/vivek - Join a game.
What are the changes?

* Created join popup.

Why do we need this change?

* To enter the room id.

--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -1,70 +1,70 @@
 <html lang="en">
 
-  <head>
-    <title>Cashflow</title>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="board-style.css">
-  </head>
+<head>
+  <title>Cashflow</title>
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/board-style.css">
+</head>
 
-  <body>
-    <div class="page-wrapper">
-      <div id="board">
+<body>
+  <div class="page-wrapper">
+    <div id="board">
 
-        <div class="ratrace-tile" id="rat-tile-1"></div>
-        <div class="ratrace-tile" id="rat-tile-2"></div>
-        <div class="ratrace-tile" id="rat-tile-3"></div>
-        <div class="ratrace-tile" id="rat-tile-4"></div>
-        <div class="ratrace-tile" id="rat-tile-5"></div>
-        <div class="ratrace-tile" id="rat-tile-6"></div>
-        <div class="ratrace-tile" id="rat-tile-7"></div>
-        <div class="ratrace-tile" id="rat-tile-8"></div>
-        <div class="ratrace-tile" id="rat-tile-9"></div>
-        <div class="ratrace-tile" id="rat-tile-10"></div>
-        <div class="ratrace-tile" id="rat-tile-11"></div>
-        <div class="ratrace-tile" id="rat-tile-12"></div>
-        <div class="ratrace-tile" id="rat-tile-13"></div>
-        <div class="ratrace-tile" id="rat-tile-14"></div>
-        <div class="ratrace-tile" id="rat-tile-15"></div>
-        <div class="ratrace-tile" id="rat-tile-16"></div>
-        <div class="ratrace-tile" id="rat-tile-17"></div>
-        <div class="ratrace-tile" id="rat-tile-18"></div>
-        <div class="ratrace-tile" id="rat-tile-19"></div>
-        <div class="ratrace-tile" id="rat-tile-20"></div>
-        <div class="ratrace-tile" id="rat-tile-21"></div>
-        <div class="ratrace-tile" id="rat-tile-22"></div>
-        <div class="ratrace-tile" id="rat-tile-23"></div>
-        <div class="ratrace-tile" id="rat-tile-24"></div>
-      </div>
-      <div id="game-panel">
-        <header>
-          <h2><a href="/">Cashflow</a></h2>
-        </header>
-        <nav id="game-nav">
-          <ul>
-            <li id="profile">
-              <span class="expands-indicator">«</span>
-              My profile
-            </li>
-            <li id="others-profile">
-              <span class="expands-indicator">«</span>
-              Other players
-            </li>
-            <li id="ledger">
-              <span class="expands-indicator">«</span>
-              Ledger
-            </li>
-          </ul>
-        </nav>
-        <div id="loan-options">
-          <div id="take-loan">Take loan</div>
-          <div id="pay-loan">Pay loan</div>
-        </div>
-        <div id="logs"></div>
-        <div id="dice-box"></div>
-        <div id="board-toggle"></div>
-      </div>
+      <div class="ratrace-tile" id="rat-tile-1"></div>
+      <div class="ratrace-tile" id="rat-tile-2"></div>
+      <div class="ratrace-tile" id="rat-tile-3"></div>
+      <div class="ratrace-tile" id="rat-tile-4"></div>
+      <div class="ratrace-tile" id="rat-tile-5"></div>
+      <div class="ratrace-tile" id="rat-tile-6"></div>
+      <div class="ratrace-tile" id="rat-tile-7"></div>
+      <div class="ratrace-tile" id="rat-tile-8"></div>
+      <div class="ratrace-tile" id="rat-tile-9"></div>
+      <div class="ratrace-tile" id="rat-tile-10"></div>
+      <div class="ratrace-tile" id="rat-tile-11"></div>
+      <div class="ratrace-tile" id="rat-tile-12"></div>
+      <div class="ratrace-tile" id="rat-tile-13"></div>
+      <div class="ratrace-tile" id="rat-tile-14"></div>
+      <div class="ratrace-tile" id="rat-tile-15"></div>
+      <div class="ratrace-tile" id="rat-tile-16"></div>
+      <div class="ratrace-tile" id="rat-tile-17"></div>
+      <div class="ratrace-tile" id="rat-tile-18"></div>
+      <div class="ratrace-tile" id="rat-tile-19"></div>
+      <div class="ratrace-tile" id="rat-tile-20"></div>
+      <div class="ratrace-tile" id="rat-tile-21"></div>
+      <div class="ratrace-tile" id="rat-tile-22"></div>
+      <div class="ratrace-tile" id="rat-tile-23"></div>
+      <div class="ratrace-tile" id="rat-tile-24"></div>
     </div>
+    <div id="game-panel">
+      <header>
+        <h2><a href="/">Cashflow</a></h2>
+      </header>
+      <nav id="game-nav">
+        <ul>
+          <li id="profile">
+            <span class="expands-indicator">«</span>
+            My profile
+          </li>
+          <li id="others-profile">
+            <span class="expands-indicator">«</span>
+            Other players
+          </li>
+          <li id="ledger">
+            <span class="expands-indicator">«</span>
+            Ledger
+          </li>
+        </ul>
+      </nav>
+      <div id="loan-options">
+        <div id="take-loan">Take loan</div>
+        <div id="pay-loan">Pay loan</div>
+      </div>
+      <div id="logs"></div>
+      <div id="dice-box"></div>
+      <div id="board-toggle"></div>
     </div>
-  </body>
+  </div>
+  </div>
+</body>
 
 </html>
