--- a/views/ratrace/otherPlayers.html
+++ b/views/ratrace/otherPlayers.html
@@ -2,8 +2,8 @@
 
 <head>
   <title>Other Players</title>
-  <link rel="stylesheet" href="common.css">
-  <link rel="stylesheet" href="otherPlayers.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/otherPlayers.css">
 </head>
 
 <body>
