[#3] dileep/vivek - join a game
What are the changes?

* Handling join in backend
* Tested /join
* Used express session

Why do we need this change?

* To allow user to join a game using valid room id.

--- a/public/css/mainMenu.css
+++ b/public/css/mainMenu.css
@@ -38,3 +38,12 @@
   border: 1px solid black;
   width: 4vmax;
 }
+
+.join-error {
+  width: 10vmax;
+  position: relative;
+  top: 17vmax;
+  left: 10vmax;
+  color: red;
+  text-align: center;
+}
