--- a/views/mainMenu.html
+++ b/views/mainMenu.html
@@ -1,26 +1,26 @@
 <html>
 
-  <head>
-    <title>Cash Flow</title>
-    <script src="js/frontEndDom.js"></script>
-    <script src="js/joinPopup.js"></script>
-    <link rel="stylesheet" href="css/mainMenu.css">
-    <link rel="stylesheet" href="css/common.css">
-  </head>
+<head>
+  <title>Cash Flow</title>
+  <script src="js/commonLib.js"></script>
+  <script src="js/joinPopup.js"></script>
+  <link rel="stylesheet" href="css/mainMenu.css">
+  <link rel="stylesheet" href="css/common.css">
+</head>
 
-  <body>
-    <div class="page">
-      <div class="background">
-        <img src="../public/images/cashflow image big.png" alt="">
-      </div>
-      <div class="menu">
-        <div class="btn-wrapper">
-          <div class="btn" id="host-btn"><a href="/host">Host</a></div>
-          <div class="btn" id="join-btn" onclick="createJoinPopup()">Join</div>
-          <div class="btn" id="how-to-play-btn"><a href="/help">How To Play</a></div>
-        </div>
+<body>
+  <div class="page">
+    <div class="background">
+      <img src="../public/images/cashflow-image-big.png" alt="">
+    </div>
+    <div class="menu">
+      <div class="btn-wrapper">
+        <div class="btn" id="host-btn"><a href="/host">Host</a></div>
+        <div class="btn" id="join-btn" onclick="createJoinPopup()">Join</div>
+        <div class="btn" id="how-to-play-btn"><a href="/help">How To Play</a></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 
 </html>
