--- a/views/register.html
+++ b/views/register.html
@@ -8,12 +8,25 @@
 
   <body>
     <div class="page-wrapper">
-      <div id="message">__MESSAGE__</div>
-      <form action="/register" method="post">
-        <input type="text" name="username" id="username-input" placeholder="Enter username" required>
-        <input type="password" name="password" id="password-input" placeholder="Enter password" required>
-        <input type="submit" value="Register">
-      </form>
+      <div id="main-image">
+        <img src="images/cashflow image big.png" alt="Cashflow" title="Cashflow">
+      </div>
+      <div class="interaction-box">
+        <h2 class="heading">Register</h2>
+        <form action="/register" method="post">
+          <div>
+            <input type="text" name="username" id="username-input" placeholder="Username" required>
+          </div>
+          <div>
+            <input type="password" name="password" id="password-input" placeholder="Password" required>
+          </div>
+          <div class="submit-button">
+            <input type="submit" value="Register">
+          </div>
+          <div id="message">__MESSAGE__</div>
+          </form>
+        <div id="suggestion">Already a user ? <a href="/login">Login</a></div>
+        </div>
     </div>
   </body>
 
