[#11] suresh/govinda - page main image
What are the changes?

* added main image in page

Why do we need this change?

* page styling

--- a/views/register.html
+++ b/views/register.html
@@ -9,7 +9,7 @@
   <body>
     <div class="page-wrapper">
       <div id="main-image">
-        <img src="images/cashflow image big.png" alt="Cashflow" title="Cashflow">
+        <img src="images/cashflow-image-big.png" alt="Cashflow" title="Cashflow">
       </div>
       <div class="interaction-box">
         <h2 class="heading">Register</h2>
