[#28] suresh/govinda - logout icon on main menu
What are the changes?

* Added font Icon for logout button

Why do we need this change?

* for letting the user to logout from website

--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -2,14 +2,14 @@
 
 <head>
   <title>Cashflow</title>
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/board-style.css">
+  <link rel="stylesheet" href="../../public/css/common.css">
+  <link rel="stylesheet" href="../../public/css/board-style.css">
 </head>
 
 <body>
   <div class="page-wrapper">
     <div id="board">
-
+      <div class="game-area"></div>
       <div class="ratrace-tile" id="rat-tile-1"></div>
       <div class="ratrace-tile" id="rat-tile-2"></div>
       <div class="ratrace-tile" id="rat-tile-3"></div>
