--- a/public/css/common.css
+++ b/public/css/common.css
@@ -37,3 +37,20 @@ body {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+
+.logout {
+  position: absolute;
+  top: 100px;
+  right: 50px;
+  font-size: 1.7vmax;
+}
+
+.logout:hover {
+  color: var(--doodad-border);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
