[#9] suresh/govinda - Game page template for rat race
What are the changes?

* Added styles for game tiles in rat race
* Added card decks in rat race

Why do we need this change?

* To serve game-board after starting game

--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -9,7 +9,19 @@
 <body>
   <div class="page-wrapper">
     <div id="board">
-      <div class="game-area"></div>
+      <div class="game-area">
+        <div class="card-deck" id="market"></div>
+        <div class="card-deck" id="small-deal"></div>
+        <div class="card-deck" id="big-deal"></div>
+        <div class="card-deck" id="doodad"></div>
+        <div id="players"></div>
+        <div id="game-stats"></div>
+        <div class="interaction-space">
+          <div id="interaction-screen"></div>
+          <div id="main-card"></div>
+          <div id="message-space"></div>
+        </div>
+      </div>
       <div class="ratrace-tile" id="rat-tile-1"></div>
       <div class="ratrace-tile" id="rat-tile-2"></div>
       <div class="ratrace-tile" id="rat-tile-3"></div>
