--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -227,4 +227,99 @@ a {
   grid-column: 4;
 }
 
+.game-area {
+  grid-row: 2/6;
+  grid-column: 2/8;
+}
 /* grid element positions end */
+
+.game-area {
+  /* background-color: lightgray; */
+  margin: 0.5vmax;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  justify-content: stretch;
+}
+/* game area element positions  START*/
+
+.card-deck, #players, #game-stats {
+  border: 0.2vmax solid;
+  border-radius: 0.5vmax;
+}
+
+#market {
+  grid-row: 1/3;
+  grid-column: 1;
+  background-color: var(--market-bg);
+  border-color: var(--market-border);
+}
+
+#small-deal{
+  grid-row: 7/9;
+  grid-column: 1;
+  background-color: var(--deal-bg);
+  border-color: var(--deal-border);
+}
+
+#big-deal {
+  grid-row: 1/3;
+  grid-column: 5;
+  background-color: var(--deal-bg);
+  border-color: var(--deal-border);
+}
+
+#doodad {
+  grid-row: 7/9;
+  grid-column: 5;
+  background-color: var(--doodad-bg);
+  border-color: var(--doodad-border);
+}
+
+/* game area element positions  end*/
+
+#players {
+  grid-row: 3/7;
+  grid-column: 1;
+  background-color: whitesmoke;
+  border-color: black;
+  margin: 1vmax 0.5vmax;
+}
+
+#game-stats {
+  grid-row: 3/7;
+  grid-column: 5;
+  background-color: whitesmoke;
+  border: 0.2vmax dashed black;
+  margin: 1vmax 0.5vmax;
+}
+
+.interaction-space {
+  grid-row: 2/8;
+  grid-column: 2/5;
+  margin: 0 1vmax;
+  /* background-color: var(--deal-bg); */
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+/* interaction space arrangement START */
+
+#interaction-screen {
+  grid-row: 1;
+  grid-column: 1/7;
+}
+
+#main-card {
+  grid-row: 2/6;
+  grid-column: 2/6;
+  margin: 1vmax;
+  border-radius: 0.5vmax;
+  border: 0.2vmax solid black;
+}
+
+#message-space {
+  grid-row: 6;
+  grid-column: 1/7;
+}
