--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -10,42 +10,118 @@
   <div class="page-wrapper">
     <div id="board">
       <div class="game-area">
-        <div class="card-deck" id="market"></div>
-        <div class="card-deck" id="small-deal"></div>
-        <div class="card-deck" id="big-deal"></div>
-        <div class="card-deck" id="doodad"></div>
+        <div class="card-deck" id="market">
+          <img src="../../public/images/ratrace/market.gif" alt="market">
+        </div>
+        <div class="card-deck" id="small-deal">
+          <img src="../../public/images/ratrace/deals.png" alt="deals">
+        </div>
+        <div class="card-deck" id="big-deal">
+          <img src="../../public/images/ratrace/deals.png" alt="deals">
+        </div>
+        <div class="card-deck" id="doodad">
+          <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+        </div>
         <div id="players"></div>
-        <div id="game-stats"></div>
+        <div id="game-stats">
+          <div class="heading">Status</div>
+          <table>
+            <tr>
+              <th>Cash flow :</th>
+              <td id="cashflow-amount"></td>
+            </tr>
+            <tr>
+              <th>Cash :</th>
+              <td id="total-cash"></td>
+            </tr>
+            <tr>
+              <th>Expenses :</th>
+              <td id="expenses"></td>
+            </tr>
+            <tr>
+              <th>Passive Income :</th>
+              <td id="passive-income">100k</td>
+            </tr>
+          </table>
+        </div>
         <div class="interaction-space">
           <div id="interaction-screen"></div>
           <div id="main-card"></div>
           <div id="message-space"></div>
         </div>
       </div>
-      <div class="ratrace-tile" id="rat-tile-1"></div>
-      <div class="ratrace-tile" id="rat-tile-2"></div>
-      <div class="ratrace-tile" id="rat-tile-3"></div>
-      <div class="ratrace-tile" id="rat-tile-4"></div>
-      <div class="ratrace-tile" id="rat-tile-5"></div>
-      <div class="ratrace-tile" id="rat-tile-6"></div>
-      <div class="ratrace-tile" id="rat-tile-7"></div>
-      <div class="ratrace-tile" id="rat-tile-8"></div>
-      <div class="ratrace-tile" id="rat-tile-9"></div>
-      <div class="ratrace-tile" id="rat-tile-10"></div>
-      <div class="ratrace-tile" id="rat-tile-11"></div>
-      <div class="ratrace-tile" id="rat-tile-12"></div>
-      <div class="ratrace-tile" id="rat-tile-13"></div>
-      <div class="ratrace-tile" id="rat-tile-14"></div>
-      <div class="ratrace-tile" id="rat-tile-15"></div>
-      <div class="ratrace-tile" id="rat-tile-16"></div>
-      <div class="ratrace-tile" id="rat-tile-17"></div>
-      <div class="ratrace-tile" id="rat-tile-18"></div>
-      <div class="ratrace-tile" id="rat-tile-19"></div>
-      <div class="ratrace-tile" id="rat-tile-20"></div>
-      <div class="ratrace-tile" id="rat-tile-21"></div>
-      <div class="ratrace-tile" id="rat-tile-22"></div>
-      <div class="ratrace-tile" id="rat-tile-23"></div>
-      <div class="ratrace-tile" id="rat-tile-24"></div>
+      <div class="ratrace-tile deal" id="rat-tile-1">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile doodad" id="rat-tile-2">
+        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-3">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile purples" id="rat-tile-4">
+        <img src="../../public/images/ratrace/charity.svg" alt="charity">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-5">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile payday" id="rat-tile-6">
+        <img src="../../public/images/ratrace/payday.png" alt="payday">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-7">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile market" id="rat-tile-8">
+        <img src="../../public/images/ratrace/market.gif" alt="market">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-9">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile doodad" id="rat-tile-10">
+        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-11">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile purples" id="rat-tile-12">
+        <img src="../../public/images/ratrace/downsized.png" alt="downsized">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-13">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile payday" id="rat-tile-14">
+        <img src="../../public/images/ratrace/payday.png" alt="payday">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-15">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile market" id="rat-tile-16">
+        <img src="../../public/images/ratrace/market.gif" alt="market">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-17">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile doodad" id="rat-tile-18">
+        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-19">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile purples" id="rat-tile-20">
+        <img src="../../public/images/ratrace/child.png" alt="child">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-21">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile payday" id="rat-tile-22">
+        <img src="../../public/images/ratrace/payday.png" alt="payday">
+      </div>
+      <div class="ratrace-tile deal" id="rat-tile-23">
+        <img src="../../public/images/ratrace/deals.png" alt="deals">
+      </div>
+      <div class="ratrace-tile market" id="rat-tile-24">
+        <img src="../../public/images/ratrace/market.gif" alt="market">
+      </div>
     </div>
     <div id="game-panel">
       <header>
