--- a/views/ratrace/professionCard.html
+++ b/views/ratrace/professionCard.html
@@ -11,7 +11,7 @@
 
     <header>
       <div id="profession-image">
-        <img src="./lawyer.png" alt="Lawyer">
+        <img src="images/lawyer.png" alt="Lawyer">
       </div>
       <div id="profession-details">
         <h3>Your Profession is</h3>
@@ -133,7 +133,9 @@
       </div>
 
     </div>
-
+    <div class="close">
+      <div class="close-btn"><a href="/game-board">Close</a></div>
+    </div>
   </div>
 </body>
 
