[#3] dileep/govinda - Changed the styles of join popup
What are the changes?

* Changed the styles of buttons in join popup.

Why do we need this change?

*

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -54,3 +54,14 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+.button {
+  background: white;
+  border: var(--def-border);
+  color: black;
+  cursor: pointer;
+  display: block;
+  padding: 0.5vmax;
+  border-radius: 0.25vmax;
+  width: 40%;
+}
