[#17] dileep/govinda - Displaying the game board template
What are the changes?

* Added end point for game board.
* Given auto focus to enter room id.

Why do we need this change?

* To allow the user to see the game board.

--- a/views/ratrace/ratrace.html
+++ b/views/ratrace/ratrace.html
@@ -1,9 +1,9 @@
-<html lang="en">
+<html>
 
 <head>
   <title>Cashflow</title>
-  <link rel="stylesheet" href="../../public/css/common.css">
-  <link rel="stylesheet" href="../../public/css/board-style.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/board-style.css">
 </head>
 
 <body>
@@ -11,16 +11,16 @@
     <div id="board">
       <div class="game-area">
         <div class="card-deck" id="market">
-          <img src="../../public/images/ratrace/market.gif" alt="market">
+          <img src="images/ratrace/market.gif" alt="market">
         </div>
         <div class="card-deck" id="small-deal">
-          <img src="../../public/images/ratrace/deals.png" alt="deals">
+          <img src="images/ratrace/deals.png" alt="deals">
         </div>
         <div class="card-deck" id="big-deal">
-          <img src="../../public/images/ratrace/deals.png" alt="deals">
+          <img src="images/ratrace/deals.png" alt="deals">
         </div>
         <div class="card-deck" id="doodad">
-          <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+          <img src="images/ratrace/doodad.png" alt="doodad">
         </div>
         <div id="players"></div>
         <div id="game-stats">
@@ -51,76 +51,76 @@
         </div>
       </div>
       <div class="ratrace-tile deal" id="rat-tile-1">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile doodad" id="rat-tile-2">
-        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+        <img src="images/ratrace/doodad.png" alt="doodad">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-3">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile purples" id="rat-tile-4">
-        <img src="../../public/images/ratrace/charity.svg" alt="charity">
+        <img src="images/ratrace/charity.svg" alt="charity">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-5">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile payday" id="rat-tile-6">
-        <img src="../../public/images/ratrace/payday.png" alt="payday">
+        <img src="images/ratrace/payday.png" alt="payday">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-7">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile market" id="rat-tile-8">
-        <img src="../../public/images/ratrace/market.gif" alt="market">
+        <img src="images/ratrace/market.gif" alt="market">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-9">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile doodad" id="rat-tile-10">
-        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+        <img src="images/ratrace/doodad.png" alt="doodad">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-11">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile purples" id="rat-tile-12">
-        <img src="../../public/images/ratrace/downsized.png" alt="downsized">
+        <img src="images/ratrace/downsized.png" alt="downsized">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-13">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile payday" id="rat-tile-14">
-        <img src="../../public/images/ratrace/payday.png" alt="payday">
+        <img src="images/ratrace/payday.png" alt="payday">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-15">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile market" id="rat-tile-16">
-        <img src="../../public/images/ratrace/market.gif" alt="market">
+        <img src="images/ratrace/market.gif" alt="market">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-17">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile doodad" id="rat-tile-18">
-        <img src="../../public/images/ratrace/doodad.png" alt="doodad">
+        <img src="images/ratrace/doodad.png" alt="doodad">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-19">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile purples" id="rat-tile-20">
-        <img src="../../public/images/ratrace/child.png" alt="child">
+        <img src="images/ratrace/child.png" alt="child">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-21">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile payday" id="rat-tile-22">
-        <img src="../../public/images/ratrace/payday.png" alt="payday">
+        <img src="images/ratrace/payday.png" alt="payday">
       </div>
       <div class="ratrace-tile deal" id="rat-tile-23">
-        <img src="../../public/images/ratrace/deals.png" alt="deals">
+        <img src="images/ratrace/deals.png" alt="deals">
       </div>
       <div class="ratrace-tile market" id="rat-tile-24">
-        <img src="../../public/images/ratrace/market.gif" alt="market">
+        <img src="images/ratrace/market.gif" alt="market">
       </div>
     </div>
     <div id="game-panel">
